2007-12-11  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Ide.Gui.Content/TextEditorProperties.cs: Remove a debug
	  message.
	* MonoDevelop.Ide.Gui.Pads/InternalLogPad.cs: The internal pad's ILogger
	  needs to be thread-safe.

2007-12-11  Lluis Sanchez Gual <lluis@novell.com> 

	* ChangeLog, MonoDevelop.Ide.Gui.Dialogs/OpenFileInSolutionDialog.cs,
	  gtk-gui/MonoDevelop.Ide.Gui.Dialogs.OpenFileInSolutionDialog.cs,
	  gtk-gui/gui.stetic: Minor improvements to OpenFileInSolutionDialog.
	  Makes the OpenFileInSolutionDialog taller by default to show more rows.
	  Matches types against FullyQualifiedName instead of simply Name. Patch
	  by Zach Lute.

2007-12-08  Zach Lute <zach.lute@gmail.com>

	* MonoDevelop.Ide.Gui.Dialogs/OpenFileInSolutionDialog.cs: Type searches now
	  match against FullyQualifiedName.
	* gtk-gui/MonoDevelop.Ide.Gui.Dialogs.OpenFileInSolutionDialog.cs,
	  gtk-gui/gui.stetic: Made window slightly larger by default.

2007-12-06  Geoff Norton  <gnorton@novell.com>

	* MonoDevelop.Ide.Gui/DisplayBindingService.cs: 
	* MonoDevelop.Ide.Gui/IdeStartup.cs: 
	* MonoDevelop.Ide.Gui/Workbench.cs: 
	* MonoDevelop.Ide.Gui.BrowserDisplayBinding/HtmlViewPane.cs:
	* MonoDevelop.Ide.Gui.Content/TextEditorProperties.cs:
	* MonoDevelop.Ide.Templates/FileTemplate.cs: Access Font/Vfs/Mime information
	  from the PlatformService instead of Gnome directly.
	* MonoDevelop.Ide.Gui/IdeStartup.cs: Call Gtk.Application.Init so we can
	  remove the dependency on Gnome.Program. 

2007-12-04  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.mdp, Makefile.am: Directory reorganization.

2007-12-03  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Ide.Gui.Pads/MonodocTreePad.cs: Make logging call more
	  verbose.
	* MonoDevelop.Ide.mdp, MonoDevelop.Ide.Gui/HelpOperations.cs,
	  MonoDevelop.Ide.Gui/HelpViewer.cs: Port to IWebBrowser to remove GtkHtml
	  dependency. Doesn't yet handle images.

2007-12-03  Lluis Sanchez Gual <lluis@novell.com> 